<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilmeActivity">


    <ImageView
        android:id="@+id/ivFilme"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:elevation="0dp"
        android:src="@drawable/img_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30px"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ivFilme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="140dp"
        android:hint="@string/email_adress"
        android:paddingLeft="10dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        />

    <EditText
        android:id="@+id/etSenha"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:hint="@string/password"
        />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etSenha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tvCriarConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/criar_conta"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:textColor="@color/blue"
        android:gravity="center_horizontal"
        />

</androidx.constraintlayout.widget.ConstraintLayout>